testData/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: nginx
    type: pod
spec:
  terminationGracePeriodSeconds: 1
  containers:
  - name: nginx
    image: nginx
