testData/sts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sts-headless
  namespace: test
  labels:
    app: sts
    type: statfulset
spec:
  selector:
    app: sts
    type: statfulset
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
